# lapsus-menubar

./: .gitignore  README.md  lapsus_rust
menubar_app/: BUGFIXES.md  Cargo.toml  ICON_INTEGRATION.md  LAUNCHAGENT_INTEGRATION.md  PATH_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UI_FIXES.md  build.rs  create_app_bundle.sh  debug_test.sh  install.sh  test.sh  test_launchagent.sh
menubar_app/icon/: AppIcon.icns
menubar_app/icon/Lapsus-Icon.icon/: icon.json
menubar_app/src/: main.rs
