[package]
name = "lapsus-menubar"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.30"
tray-icon = "0.19"
sysinfo = "0.32"
auto-launch = "0.5"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"

[build-dependencies]
# Optional: for creating macOS app bundle
# cargo-bundle = "0.6"

[[bin]]
name = "lapsus-menubar"
path = "src/main.rs"
